Fix slider position on Firefox
See gh-289

--- a/start-client/src/styles/_main.scss
+++ b/start-client/src/styles/_main.scss
@@ -896,6 +896,7 @@ $placeholder-border: #e4e4e4;
   height: 0;
   width: 0;
   visibility: hidden;
+  position: absolute;
 }
 
 .switch-label {
